# Group-11---integrated-RS1-Code

./: TEsting git
41068_ignition_bringup/: README.md
41068_ignition_bringup/config/: gazebo_bridge.yaml  nav2_params.yaml
41068_ignition_bringup/launch/: 41068_custom.launch.py
41068_ignition_bringup/models/LACING_SHEEP/: model.sdf
41068_ignition_bringup/models/flat_terrain_model/: model.config  model.sdf
41068_ignition_bringup/models/flat_terrain_model/meshes/: flatgrass.dae
41068_ignition_bringup/models/forest_plane/: model.config  model.sdf
41068_ignition_bringup/models/forest_plane/meshes/: RS1_environment.dae  test.dae
41068_ignition_bringup/models/my_custom_model/: model.config  model.sdf
41068_ignition_bringup/models/my_custom_model/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
41068_ignition_bringup/models/my_custom_model/log/: latest_build
41068_ignition_bringup/models/my_custom_model/meshes/: my_mesh.dae
41068_ignition_bringup/worlds/: flat_terrain_rocks.sdf  flat_terrain_trees.sdf  my_custom_demo.sdf  simple_trees.sdf
41068_ignition_bringup/worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
41068_ignition_bringup/worlds/log/: latest_build
forest_clearance_detector/: CMakeLists.txt  package.xml
forest_clearance_detector/launch/: clearance_and_filter.launch.py  clearance_demo.launch.py  filter_and_marker.launch.py
forest_clearance_detector/src/: costmap_goal_filter.cpp  goals_markers.cpp  rotating_clearance_detector.cpp
husky_nav_goal/: CMakeLists.txt  package.xml
husky_nav_goal/launch/: mission_nav.launch.py
husky_nav_goal/src/: goal_nav.cpp  goal_tracker.cpp  goals_markers.cpp  tsp_clearance_goals.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_navigation.launch.py
install/41068_ignition_bringup/share/41068_ignition_bringup/models/LACING_SHEEP/: metadata.pbtxt  model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/LACING_SHEEP/meshes/: model.mtl
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_wall/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/grass_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/: common_properties.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/meshes/: base_link.dae  bumper.dae  jpl04_arch_nosensor.stl  top_chassis.dae  top_plate.dae  wheel.dae
install/41068_ignition_bringup/share/41068_ignition_bringup/worlds/: large_demo.sdf  simple_trees.sdf
install/41068_ignition_bringup/share/ament_index/resource_index/package_run_dependencies/: 41068_ignition_bringup
install/41068_ignition_bringup/share/ament_index/resource_index/parent_prefix_path/: 41068_ignition_bringup
log/: latest_build
mission_fsm/: CMakeLists.txt  package.xml
mission_fsm/launch/: mission_fsm_gui.launch.py  mission_fsm_gui_ignition.launch.py  mission_fsm_mvp.launch.py  mission_nav_clearance_planting.launch.py
mission_fsm/log/: latest_list
mission_fsm/maps/: FlatTerrainRockssiteA.pgm  FlatTerrainRockssiteA.yaml  FlatTerrainTreessiteA.pgm  FlatTerrainTreessiteA.yaml  LargeWorldsiteA.pgm  LargeWorldsiteA.yaml  MyCustomDemositeA.pgm  MyCustomDemositeA.yaml  siteA.pgm  siteA.yaml  siteB.yaml  siteC.pgm  siteC.yaml
mission_fsm/src/: mission_fsm_node.cpp
planting_conditions/: CMakeLists.txt  package.xml
planting_conditions/launch/: planting_pipeline.launch.py
planting_conditions/src/: cover_sim.cpp  irrigation_sim.cpp  planting_pipeline.py  planting_sim.cpp  planting_site_markers.cpp  seed_weight.cpp  soil_prep_fsm.cpp  straight_drive.cpp  tcp_to_ros2_both.py  water_level_sim.cpp
telemetry_node_pkg/: package.xml  setup.cfg  setup.py
telemetry_node_pkg/telemetry_node_pkg/: telemetry_node.py
ugv_dashboard_gui/: setup.cfg  setup.py
ugv_dashboard_gui/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ugv_dashboard_gui/install/ugv_dashboard_gui/lib/ugv_dashboard_gui/: gui_dashboard  pgm_publisher
ugv_dashboard_gui/install/ugv_dashboard_gui/share/ugv_dashboard_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ugv_dashboard_gui/install/ugv_dashboard_gui/share/ugv_dashboard_gui/launch/: gui_launch.py
ugv_dashboard_gui/install/ugv_dashboard_gui/share/ugv_dashboard_gui/test_images/: siteA.pgm
ugv_dashboard_gui/launch/: gui_launch.py
ugv_dashboard_gui/log/: latest_build
ugv_dashboard_gui/ugv_dashboard_gui/: README.md  package.xml  setup.py
ugv_dashboard_gui/ugv_dashboard_gui/pyside6_gui/: gui_format.py  telemetry_dashboard_gui.py
ugv_dashboard_gui/ugv_dashboard_gui/ugv_dashboard_gui/: pgm_publisher.py
ugv_dashboard_gui/ugv_dashboard_gui/ugv_dashboard_gui/pyside6_gui/: telemetry_dashboard_gui.py
