<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planting_conditions</name>
  <version>1.0.3</version>
  <description>Ignition/Gazebo bringup with Husky and custom nodes (straight drive, water level)</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core C++ deps -->
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>geometry_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Water-level nodes -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <!-- Ignition / Gazebo integration (keep if you use them) -->
  <depend>ros_ign_interfaces</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <!-- Optional -->
  <depend>robot_localization</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
